[project]
name = "jsonformer"
version = "0.13.0"
description = ""
readme = "README.md"
authors = [{ name = "Rahul Sengottuvelu", email = "rgsduke@gmail.com" }]
requires-python = ">=3.8"
dependencies = [
    "accelerate>=1.0.1",
    "anthropic>=0.49.0",
    "pydantic>=2.10.6",
    "termcolor>=2.4.0",
    "torch>=2.5.1",
    # "bitsandbytes",
    "transformers>=4.46.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
